# allocator

./: CMakeLists.txt  README.md  custom_allocator.cpp  custom_allocator.h  main.cpp
.github/workflows/: cmake.yml
include/: custom_allocator.h  custom_vector.h  cvector.h  factorial.h
src/: CMakeLists.txt  main.cpp  test.cpp  test_exceptions.cpp
